--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE.txt
 recursive-include aldryn_stripe_shop/templates *
 recursive-include aldryn_stripe_shop/migrations *
+recursive-include aldryn_stripe_shop/static *
 recursive-exclude * *.pyc
